--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,6 @@ include(GoogleTest)
 
 add_executable(
   SelfieSegmenter_test
-  ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter/SelfieSegmenter.cpp
   SelfieSegmenter/SelfieSegmenter_test.cpp
 )
 target_include_directories(
@@ -13,7 +12,7 @@ target_compile_definitions(
   SelfieSegmenter_test
   PRIVATE DATA_DIR=\"${CMAKE_SOURCE_DIR}/data\" TESTS_DIR=\"${CMAKE_SOURCE_DIR}/tests\" NOMINMAX
 )
-target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main ncnn opencv_core opencv_imgproc opencv_imgcodecs)
+target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main SelfieSegmenter opencv_core opencv_imgcodecs)
 gtest_discover_tests(SelfieSegmenter_test DISCOVERY_MODE PRE_TEST)
 
 add_executable(UpdateChecker_test UpdateChecker/UpdateChecker_test.cpp)
