--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,41 +82,17 @@ else()
 endif()
 
 add_library(SelfieSegmenter STATIC)
-target_sources(
-  SelfieSegmenter
-  PRIVATE
-    src/SelfieSegmenter/SelfieSegmenter.cpp
-)
-target_include_directories(
-  SelfieSegmenter
-  PUBLIC
-    ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter
-)
-target_link_libraries(
-  SelfieSegmenter
-  PUBLIC ncnn
-)
+target_sources(SelfieSegmenter PRIVATE src/SelfieSegmenter/SelfieSegmenter.cpp)
+target_include_directories(SelfieSegmenter PUBLIC ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter)
+target_link_libraries(SelfieSegmenter PUBLIC ncnn)
 
 add_library(UpdateChecker INTERFACE)
-target_include_directories(
-  UpdateChecker
-  INTERFACE
-    ${CMAKE_SOURCE_DIR}/src/UpdateChecker
-)
-target_link_libraries(
-  UpdateChecker
-  INTERFACE CURL::libcurl
-)
+target_include_directories(UpdateChecker INTERFACE ${CMAKE_SOURCE_DIR}/src/UpdateChecker)
+target_link_libraries(UpdateChecker INTERFACE CURL::libcurl)
 
 add_library(BridgeUtils INTERFACE)
-target_include_directories(
-  BridgeUtils
-  INTERFACE
-    ${CMAKE_SOURCE_DIR}/src/BridgeUtils
-)
-target_link_libraries(
-  BridgeUtils
-  INTERFACE OBS::libobs fmt::fmt)
+target_include_directories(BridgeUtils INTERFACE ${CMAKE_SOURCE_DIR}/src/BridgeUtils)
+target_link_libraries(BridgeUtils INTERFACE OBS::libobs fmt::fmt)
 
 target_compile_definitions(
   ${CMAKE_PROJECT_NAME}
@@ -132,10 +108,7 @@ target_sources(
     src/Core/RenderingContext.cpp
     src/plugin-main.c
 )
-target_link_libraries(
-  ${CMAKE_PROJECT_NAME}
-  PUBLIC OBS::libobs BridgeUtils SelfieSegmenter UpdateChecker
-)
+target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC OBS::libobs BridgeUtils SelfieSegmenter UpdateChecker)
 if(Backward_FOUND)
   target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Backward::Backward)
   target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_BACKWARD)
