Refactor CMakeLists formatting for clarity
Simplified and condensed CMakeLists.txt and tests/CMakeLists.txt by removing unnecessary line breaks and grouping arguments for better readability and maintainability. No functional changes were made.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,7 @@
 include(GoogleTest)
 
 # # SelfieSegmenter_test
-add_executable(
-  SelfieSegmenter_test
-  SelfieSegmenter/SelfieSegmenter_test.cpp
-)
+add_executable(SelfieSegmenter_test SelfieSegmenter/SelfieSegmenter_test.cpp)
 target_compile_definitions(
   SelfieSegmenter_test
   PRIVATE DATA_DIR=\"${CMAKE_SOURCE_DIR}/data\" TESTS_DIR=\"${CMAKE_SOURCE_DIR}/tests\" NOMINMAX
