--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,6 @@ if(ENABLE_QT)
   )
 endif()
 
-set(VCPKG_INSTALLED_DIR "${CMAKE_SOURCE_DIR}/vcpkg_installed")
-list(PREPEND CMAKE_PREFIX_PATH "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
-
 option(USE_PKGCONFIG "Use pkg-config to find dependencies" OFF)
 
 if(USE_PKGCONFIG)
@@ -73,7 +70,9 @@ if(USE_PKGCONFIG)
   target_link_libraries(OpenCV::opencv_imgproc INTERFACE opencv_imgproc)
   add_library(OpenCV::opencv_imgcodecs INTERFACE IMPORTED)
   target_link_libraries(OpenCV::opencv_imgcodecs INTERFACE opencv_imgcodecs)
-else()
+elseif(NOT VCPKG_TARGET_TRIPLET STREQUAL "")
+  list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+
   find_package(Backward CONFIG)
   find_package(CURL CONFIG REQUIRED)
   find_package(fmt CONFIG REQUIRED)
@@ -84,6 +83,8 @@ else()
   add_library(OpenCV::opencv_core ALIAS opencv_core)
   add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
   add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
+else()
+  message(FATAL_ERROR "Either USE_PKGCONFIG must be ON or VCPKG_TARGET_TRIPLET must be set.")
 endif()
 
 add_library(SelfieSegmenter STATIC)
