Refactor vcpkg triplet handling in CMakeLists.txt
Replaces the elseif(VCPKG_TARGET_TRIPLET) block with a nested if inside the else branch, improving clarity and flexibility. Removes the fatal error message when neither USE_PKGCONFIG nor VCPKG_TARGET_TRIPLET is set.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,8 +72,10 @@ if(USE_PKGCONFIG)
   target_link_libraries(OpenCV::opencv_imgproc INTERFACE opencv_imgproc)
   add_library(OpenCV::opencv_imgcodecs INTERFACE IMPORTED)
   target_link_libraries(OpenCV::opencv_imgcodecs INTERFACE opencv_imgcodecs)
-elseif(VCPKG_TARGET_TRIPLET)
-  list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+else()
+  if(VCPKG_TARGET_TRIPLET)
+    list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+  endif()
 
   find_package(Backward CONFIG)
   find_package(CURL CONFIG REQUIRED)
@@ -85,8 +87,6 @@ elseif(VCPKG_TARGET_TRIPLET)
   add_library(OpenCV::opencv_core ALIAS opencv_core)
   add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
   add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
-else()
-  message(FATAL_ERROR "Either USE_PKGCONFIG must be ON or VCPKG_TARGET_TRIPLET must be set.")
 endif()
 
 add_library(SelfieSegmenter STATIC)
