--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,11 +34,26 @@ if(ENABLE_QT)
   )
 endif()
 
-set(VCPKG_TARGET_TRIPLET "Specify the VCPKG target triplet" CACHE STRING "")
 option(BUILD_TESTING "Build tests" OFF)
+option(BUILD_WITH_HOMEBREW "Build with Homebrew on macOS" OFF)
 option(USE_PKGCONFIG "Use pkg-config to find dependencies" OFF)
+set(VCPKG_TARGET_TRIPLET "Specify the VCPKG target triplet" CACHE STRING "")
 
-if(USE_PKGCONFIG)
+if(VCPKG_TARGET_TRIPLET)
+  set(VCPKG_PREFIX "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+
+  find_package(Backward CONFIG NO_DEFAULT_PATH HINTS ${VCPKG_PREFIX})
+
+  find_package(CURL CONFIG REQUIRED NO_DEFAULT_PATH HINTS ${VCPKG_PREFIX})
+  find_package(fmt CONFIG REQUIRED NO_DEFAULT_PATH HINTS ${VCPKG_PREFIX})
+  find_package(ncnn CONFIG REQUIRED NO_DEFAULT_PATH HINTS ${VCPKG_PREFIX})
+  find_package(OpenCV CONFIG REQUIRED NO_DEFAULT_PATH HINTS ${VCPKG_PREFIX})
+
+  add_library(ncnn::ncnn ALIAS ncnn)
+  add_library(OpenCV::opencv_core ALIAS opencv_core)
+  add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
+  add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
+elseif(USE_PKGCONFIG)
   find_package(PkgConfig REQUIRED)
 
   # --- CURL ---
@@ -60,7 +75,7 @@ if(USE_PKGCONFIG)
   add_library(ncnn::ncnn INTERFACE IMPORTED)
   target_link_libraries(ncnn::ncnn INTERFACE ${PC_NCNN_LIBRARIES})
   target_include_directories(ncnn::ncnn INTERFACE ${PC_NCNN_INCLUDE_DIRS})
-  target_compile_definitions(ncnn::ncnn INTERFACE ${PC_NCNN_CFLAGS_OTHER})
+  target_compile_definitions(ncnn::ncnn INTERFACE ${PC_NCNN_CFLAGS_OTHER} -DPREFIXED_NCNN_HEADERS)
 
   # --- OpenCV ---
   pkg_check_modules(PC_OPENCV REQUIRED opencv4)
@@ -72,13 +87,11 @@ if(USE_PKGCONFIG)
   target_link_libraries(OpenCV::opencv_imgproc INTERFACE opencv_imgproc)
   add_library(OpenCV::opencv_imgcodecs INTERFACE IMPORTED)
   target_link_libraries(OpenCV::opencv_imgcodecs INTERFACE opencv_imgcodecs)
-else()
-  if(VCPKG_TARGET_TRIPLET)
-    list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
-  endif()
+elseif(APPLE AND BUILD_WITH_HOMEBREW)
+  list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt/libomp)
+  list(APPEND CMAKE_PREFIX_PATH /opt/homebrew)
 
-  find_package(Backward CONFIG)
-  find_package(CURL CONFIG REQUIRED)
+  find_package(CURL MODULE REQUIRED)
   find_package(fmt CONFIG REQUIRED)
   find_package(ncnn CONFIG REQUIRED)
   find_package(OpenCV CONFIG REQUIRED)
@@ -87,6 +100,8 @@ else()
   add_library(OpenCV::opencv_core ALIAS opencv_core)
   add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
   add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
+else()
+  message(FATAL_ERROR "Either USE_PKGCONFIG or VCPKG_TARGET_TRIPLET must be set.")
 endif()
 
 add_library(SelfieSegmenter STATIC)
