Update CMake Homebrew paths and remove VCPKG option
Removed the VCPKG_TARGET_TRIPLET cache option and added additional Homebrew paths for libomp and general dependencies to improve macOS compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,6 @@ endif()
 option(BUILD_TESTING "Build tests" OFF)
 option(BUILD_WITH_HOMEBREW "Build with Homebrew on macOS" OFF)
 option(USE_PKGCONFIG "Use pkg-config to find dependencies" OFF)
-set(VCPKG_TARGET_TRIPLET "Specify the VCPKG target triplet" CACHE STRING)
 
 if(VCPKG_TARGET_TRIPLET)
   list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
@@ -90,6 +89,8 @@ elseif(USE_PKGCONFIG)
 elseif(APPLE AND BUILD_WITH_HOMEBREW)
   list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt/libomp)
   list(APPEND CMAKE_PREFIX_PATH /opt/homebrew)
+  list(APPEND CMAKE_PREFIX_PATH /usr/local/opt/libomp)
+  list(APPEND CMAKE_PREFIX_PATH /usr/local)
 
   find_package(CURL MODULE REQUIRED)
   find_package(fmt CONFIG REQUIRED)
