chore: update git arch version

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 !/docs
 !/src
 !/tests
+!/unsupported
+/unsupported/arch/*/*
 !/unsupported/arch/*/PKGBUILD
-!/unsupported/arch/README.md
-!/unsupported/flatpak/patches/*
+/unsupported/flatpak/*
+!/unsupported/flatpak/patches/
 !/unsupported/flatpak/*.xml
 !/unsupported/flatpak/*.json
 !/unsupported/flatpak/README.md
