Add link directories for pkg-config dependencies
Added target_link_directories for libcurl, fmt, ncnn, and OpenCV targets when using pkg-config. This ensures that library directories provided by pkg-config are correctly set for linking, improving compatibility with custom library locations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ elseif(USE_PKGCONFIG)
   target_link_libraries(CURL::libcurl INTERFACE ${PC_CURL_LIBRARIES})
   target_include_directories(CURL::libcurl INTERFACE ${PC_CURL_INCLUDE_DIRS})
   target_compile_definitions(CURL::libcurl INTERFACE ${PC_CURL_CFLAGS_OTHER})
+  target_link_directories(CURL::libcurl INTERFACE ${PC_CURL_LIBRARY_DIRS})
 
   # --- fmt ---
   pkg_check_modules(PC_FMT REQUIRED fmt)
@@ -68,6 +69,7 @@ elseif(USE_PKGCONFIG)
   target_link_libraries(fmt::fmt INTERFACE ${PC_FMT_LIBRARIES})
   target_include_directories(fmt::fmt INTERFACE ${PC_FMT_INCLUDE_DIRS})
   target_compile_definitions(fmt::fmt INTERFACE ${PC_FMT_CFLAGS_OTHER})
+  target_link_directories(fmt::fmt INTERFACE ${PC_FMT_LIBRARY_DIRS})
 
   # --- ncnn ---
   pkg_check_modules(PC_NCNN REQUIRED ncnn)
@@ -75,6 +77,7 @@ elseif(USE_PKGCONFIG)
   target_link_libraries(ncnn::ncnn INTERFACE ${PC_NCNN_LIBRARIES})
   target_include_directories(ncnn::ncnn INTERFACE ${PC_NCNN_INCLUDE_DIRS})
   target_compile_definitions(ncnn::ncnn INTERFACE ${PC_NCNN_CFLAGS_OTHER} PREFIXED_NCNN_HEADERS)
+  target_link_directories(ncnn::ncnn INTERFACE ${PC_NCNN_LIBRARY_DIRS})
 
   # --- OpenCV ---
   pkg_check_modules(PC_OPENCV REQUIRED opencv4)
@@ -82,10 +85,13 @@ elseif(USE_PKGCONFIG)
   target_link_libraries(OpenCV::opencv_core INTERFACE opencv_core)
   target_include_directories(OpenCV::opencv_core INTERFACE ${PC_OPENCV_INCLUDE_DIRS})
   target_compile_definitions(OpenCV::opencv_core INTERFACE ${PC_OPENCV_CFLAGS_OTHER})
+  target_link_directories(OpenCV::opencv_core INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
   add_library(OpenCV::opencv_imgproc INTERFACE IMPORTED)
   target_link_libraries(OpenCV::opencv_imgproc INTERFACE opencv_imgproc)
+  target_link_directories(OpenCV::opencv_imgproc INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
   add_library(OpenCV::opencv_imgcodecs INTERFACE IMPORTED)
   target_link_libraries(OpenCV::opencv_imgcodecs INTERFACE opencv_imgcodecs)
+  target_link_directories(OpenCV::opencv_imgcodecs INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
 elseif(APPLE AND BUILD_WITH_HOMEBREW)
   list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt/libomp)
   list(APPEND CMAKE_PREFIX_PATH /opt/homebrew)
