Add NCNN conversion script and update model
Added vendor/ConvertNcnn/convert.bash to automate downloading, converting, and quantizing the mediapipe selfie segmentation model to NCNN int8 format. Updated .gitignore to include vendor/ConvertNcnn and the new script. Updated the binary model file in data/models with the newly generated int8 version.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 !/unsupported/flatpak/README.md
 !/vcpkg-overlay-ports
 !/vcpkg-triplets
+!/vendor
+/vendor/ConvertNcnn/*
+!/vendor/ConvertNcnn/convert.bash
 !.aiexclude
 !.clang-format
 !.gersemirc
