Add CoreMLSelfieSegmenter vendor module
Introduces the CoreMLSelfieSegmenter module with scripts for model conversion, a CoreML model package, Objective-C wrapper files, and an XcodeGen project configuration. Updates .gitignore to handle new vendor files.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 !/vendor
 /vendor/ConvertNcnn/*
 !/vendor/ConvertNcnn/convert.bash
+/vendor/CoreMLSelfieSegmenter/*
+!/vendor/CoreMLSelfieSegmenter/Sources/
+!/vendor/CoreMLSelfieSegmenter/Scripts/
+!/vendor/CoreMLSelfieSegmenter/project.yml
 !.aiexclude
 !.clang-format
 !.gersemirc
