Refactor segmenter input handling and AVX2 check
Replaces readerSegmenterInput with bgrxSegmenterInputReader in RenderingContext for improved clarity and consistency. Updates AVX2 availability check variable naming in ShapeConverter.cpp. Also adds ShapeConverter.cpp to SelfieSegmenter library sources in CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,7 +139,10 @@ if(APPLE)
 endif()
 
 add_library(SelfieSegmenter STATIC)
-target_sources(SelfieSegmenter PRIVATE src/SelfieSegmenter/NcnnSelfieSegmenter.cpp)
+target_sources(
+  SelfieSegmenter
+  PRIVATE src/SelfieSegmenter/ShapeConverter.cpp src/SelfieSegmenter/NcnnSelfieSegmenter.cpp
+)
 target_include_directories(SelfieSegmenter PUBLIC ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter)
 target_link_libraries(SelfieSegmenter PUBLIC ncnn::ncnn)
 
