--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -70,6 +70,18 @@ jobs:
       - name: "Run tests"
         run: "ctest --preset macos --verbose"
 
+  TestCoreMLSelfierSegmenterOnMacOS:
+    runs-on: "macos-15"
+    timeout-minutes: 30
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v5"
+
+      - name: "Test CoreMLSelfieSegmenter"
+        working-directory: "vendor/CoreMLSelfieSegmenter/Scripts"
+        run: "./Scripts/test.bash"
+
   TestOnWindows:
     runs-on: "windows-2022"
     timeout-minutes: 30
