Refactor CoreMLSelfieSegmenter resource management
Replaces manual Core Graphics resource management and unique_ptr deleters with a simplified approach using performWithBGRAData, reducing boilerplate and improving ARC compliance. Updates the GitHub Actions workflow to generate the Xcode project before running tests.

--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -78,6 +78,10 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v5"
 
+      - name: "Generate Xcodeproj"
+        working-directory: "vendor/CoreMLSelfieSegmenter"
+        run: "xcodegen generate"
+
       - name: "Test CoreMLSelfieSegmenter"
         working-directory: "vendor/CoreMLSelfieSegmenter"
         run: "./Scripts/test.bash"
