Refactor CoreMLSelfieSegmenter and update CI workflow
Refactored CoreMLSelfieSegmenterImpl to use a helper for unique_ptr creation and moved wrapperDeleter to an anonymous namespace for better encapsulation. Updated GitHub Actions workflow to install xcodegen via Homebrew before generating Xcode projects.

--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -78,6 +78,9 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v5"
 
+      - name: "Install xcodegen"
+        run: "brew install xcodegen"
+
       - name: "Generate Xcodeproj"
         working-directory: "vendor/CoreMLSelfieSegmenter"
         run: "xcodegen generate"
