Improve CoreML segmenter thread safety and build setup
Added mutex protection to CoreMLSelfieSegmenter processing for thread safety and updated mask buffer access. Updated CMakeLists.txt to use source directory for DerivedData and link the CoreML framework. CONTRIBUTING.md now includes Mac testing instructions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,9 +113,9 @@ endif()
 
 if(APPLE)
   if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(_default_derived_data_path "${CMAKE_BINARY_DIR}/DerivedData/Build/Products/Debug")
+    set(_default_derived_data_path "${CMAKE_SOURCE_DIR}/DerivedData/Build/Products/Debug")
   else()
-    set(_default_derived_data_path "${CMAKE_BINARY_DIR}/DerivedData/Build/Products/Release")
+    set(_default_derived_data_path "${CMAKE_SOURCE_DIR}/DerivedData/Build/Products/Release")
   endif()
   set(DERIVED_DATA_PATH "${_default_derived_data_path}" CACHE PATH "Path to Xcode DerivedData build products")
 
@@ -148,6 +148,7 @@ if(COREML_SELFIE_SEGMENTER_FRAMEWORK_PATH)
     SelfieSegmenter
     PRIVATE src/SelfieSegmenter/CoreMLSelfieSegmenter.mm
   )
+  target_link_libraries(SelfieSegmenter PRIVATE "${COREML_SELFIE_SEGMENTER_FRAMEWORK_PATH}")
 endif()
 target_include_directories(SelfieSegmenter PUBLIC ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter)
 target_link_libraries(SelfieSegmenter PUBLIC ncnn::ncnn)
