Add test images for CoreMLSelfieSegmenter
Added selfie001.jpg and selfie001_mask.png to the Tests directory and updated .gitignore to include the Tests folder. These images will be used for testing the CoreMLSelfieSegmenter functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 /vendor/CoreMLSelfieSegmenter/*
 !/vendor/CoreMLSelfieSegmenter/Sources/
 !/vendor/CoreMLSelfieSegmenter/Scripts/
+!/vendor/CoreMLSelfieSegmenter/Tests/
 !/vendor/CoreMLSelfieSegmenter/project.yml
 !.aiexclude
 !.clang-format
